[metadata]
name = gpstools
version = 0.0.1
author = Julian Guillermo Zapata Rugeles
author_email = julianruggeles@gmail.com
description = Crea mapas utilizando coordenadas gps de forma simple
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Julian-guillermo-zapata-rugeles/python-gps-tools
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL
    Operating System :: LINUX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src